--- a/css/styles.css
+++ b/css/styles.css
@@ -74,8 +74,8 @@ body {
     color: #212121;
 }
 
-.nav-list .nav-item-link:hover,
-.nav-list .nav-item-link:focus {
+.nav-item-link:hover,
+.nav-item-link:focus {
     color: #2196F3;
 }
 
@@ -225,9 +225,37 @@ body {
 }
 
 .work-list {
+    
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 30px;
+}
+
+
+.work-item {
+    position: relative;
+}
+
+
+.work-item-image {
+    position: absolute;
+    z-index: 1;
+}
+
+.item-text-area {
+    position: absolute;
+    z-index: 2;
+    height: 70px;
+    width: 370px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(47, 48, 58, 0.8);
+    top: 224px;
+}
+
+.item-text {
+    
 }
 
 /* TEAM SECTION CLASS */
