--- a/css/styles.css
+++ b/css/styles.css
@@ -238,24 +238,32 @@ body {
 
 
 .work-item-image {
-    position: absolute;
-    z-index: 1;
+    
+    
 }
 
 .item-text-area {
     position: absolute;
-    z-index: 2;
+    
     height: 70px;
-    width: 370px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(47, 48, 58, 0.8);
-    top: 224px;
+    background-color: rgba(47, 48, 58, 0.8);
+    bottom: 0px;
 }
 
 .item-text {
-    
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+text-align: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #FFFFFF;
 }
 
 /* TEAM SECTION CLASS */
@@ -568,6 +576,41 @@ body {
 .portfolio-pic-item {
     background-color: #FFFFFF;
     border: 1px solid #EEEEEE;
+}
+
+.portfolio-pic-item:hover,
+.portfolio-pic-item:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-pic-item:hover .overlay-text
+.portfolio-pic-item:focus .overlay-text {
+    transform: translateY(0%);
+}
+
+.card-overlay {
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay-text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: calc(28/18);
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    background-color: rgba(33, 150, 243, 0.9);
+    position: absolute;
+    top:0;
+    left: 0;
+    height: 100%;
+    align-items: center;
+    padding: 20px;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.165, 0.84, 0.44, 1);
+
 }
 
 /* ICON CLASSES */
