--- a/css/styles.css
+++ b/css/styles.css
@@ -67,11 +67,32 @@ body {
     padding-top: 32px;
     padding-bottom: 32px;
     display: block;
-    font-weight: 500;
+    font-weight: 500px;
     font-size: 14px;
     line-height: calc(16/14);
     letter-spacing: 0.02em;
     color: #212121;
+    position: relative;
+}
+
+.nav-item-link::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196F3;
+    transform: scaleX(0);
+    transition: transform 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    transform-origin: left;
+}  
+
+.nav-item-link:hover::after,
+.nav-item-link:focus::after{
+    transform: scaleX(1);
 }
 
 .nav-item-link:hover,
@@ -81,6 +102,19 @@ body {
 
 .nav-item-link-current {
     color: blue;
+}
+
+.nav-item-link-current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height:4px;
+    border-radius:2px ;
+    background-color: #2196F3;
+    transform: scaleX(1);
 }
 
 .nav-item-link:active {
@@ -101,7 +135,7 @@ body {
     padding-top: 32px;
     padding-bottom: 32px;
     display: block;
-    font-weight: 500;
+    font-weight: 500px;
     font-size: 14px;
     line-height: calc(16/14);
     letter-spacing: 0.02em;
@@ -118,6 +152,30 @@ body {
 
 .contacts-list .list-item:active {
     color: purple;
+}
+
+.contacts-list .list-item {
+    display:block;
+    position: relative;
+}
+
+.contacts-list .list-item::after {
+    content: "";
+    position: absolute; 
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196F3;
+    transform: scaleX(0);
+    transition: transform 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    transform-origin: left;
+}
+
+.contacts-list .list-item:hover::after{
+    transform: scaleX(1);
 }
 
 /* HERO CLASS */
@@ -352,6 +410,8 @@ color: #FFFFFF;
     margin-left: 10px;
 }
 
+
+
 /*
 .team-icon-instagram {
     margin-top: 28px;
@@ -583,7 +643,7 @@ color: #FFFFFF;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-pic-item:hover .overlay-text
+.portfolio-pic-item:hover .overlay-text,
 .portfolio-pic-item:focus .overlay-text {
     transform: translateY(0%);
 }
@@ -610,7 +670,7 @@ color: #FFFFFF;
     padding: 20px;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.165, 0.84, 0.44, 1);
-
+    text-align: center;
 }
 
 /* ICON CLASSES */
@@ -677,4 +737,46 @@ color: #FFFFFF;
     border-color: #2196F3;
 }
 
+/* MODAL WINDOW CLASS */
 
+.backdrop {
+    position: fixed;
+    height: 100vh;
+    width:100vw;
+    background-color: rgba(0, 0, 0, 0.2);
+    top: 0;
+    left: 0;
+    opacity: 1;
+    visibility: visible;
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.modal-window {
+    position: absolute;
+    min-height: 581px;
+    width: 528px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal-button {
+    background-color: white;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    color: #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top:8px;
+    right:8px;
+}
