--- a/css/styles.css
+++ b/css/styles.css
@@ -666,11 +666,12 @@ color: #FFFFFF;
     top:0;
     left: 0;
     height: 100%;
-    align-items: center;
-    padding: 20px;
+    padding-top: 63px;
+    padding-left: 24px;
+    padding-right: 24px;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.165, 0.84, 0.44, 1);
-    text-align: center;
+    
 }
 
 /* ICON CLASSES */
@@ -779,4 +780,11 @@ color: #FFFFFF;
     position: absolute;
     top:8px;
     right:8px;
+    cursor: pointer;
+}
+
+.modal-button:hover,
+.modal-button:focus {
+    background-color: red;
+    color: #FFFFFF;
 }
