--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+:root{
+    --time: 2500ms;
+    --time-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+    --accent-color: #2196F3;
+}
+
 
 * {
     padding: 0;
@@ -43,7 +49,7 @@ body {
     font-size: 26px;
     line-height: calc(31/26);
     letter-spacing: 0.03em;
-    color: #2196F3;
+    color: var(--accent-color)
 
 }
 
@@ -73,6 +79,7 @@ body {
     letter-spacing: 0.02em;
     color: #212121;
     position: relative;
+    transition: color var(--time) var(--time-function);
 }
 
 .nav-item-link::after {
@@ -84,9 +91,9 @@ body {
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    background-color: #2196F3;
+    background-color: var(--accent-color);
     transform: scaleX(0);
-    transition: transform 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: transform var(--time) var(--time-function);
     transform-origin: left;
 }  
 
@@ -97,7 +104,7 @@ body {
 
 .nav-item-link:hover,
 .nav-item-link:focus {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 
 .nav-item-link-current {
@@ -113,7 +120,7 @@ body {
     width: 100%;
     height:4px;
     border-radius:2px ;
-    background-color: #2196F3;
+    background-color: var(--accent-color);
     transform: scaleX(1);
 }
 
@@ -142,12 +149,13 @@ body {
     color: #757575;
     display: flex;
     align-items: center;
+    transition: color var(--time) var(--time-function);
 }
 
 
 .contacts-list .list-item:hover,
 .contacts-list .list-item:focus {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 
 .contacts-list .list-item:active {
@@ -168,9 +176,9 @@ body {
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    background-color: #2196F3;
+    background-color: var(--accent-color);
     transform: scaleX(0);
-    transition: transform 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: transform var(--time) var(--time-function);
     transform-origin: left;
 }
 
@@ -210,7 +218,7 @@ body {
 
 .button-section {
     margin-top: 30px;
-    background: #2196F3;
+    background: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
@@ -222,6 +230,7 @@ body {
     color: #FFFFFF;
     cursor: pointer;
     padding: 10px 20px;
+    transition: color var(--time) var(--time-function);
 }
 
 .button-section:hover,
@@ -385,11 +394,12 @@ color: #FFFFFF;
     justify-content: center;
     border-radius: 50%;
     color: #AFB1B8;
+    transition: color var(--time) var(--time-function), background-color var(--time) var(--time-function);
 }
 
 .team-social-link:hover,
 .team-social-link:focus {
-    background-color: #2196F3;
+    background-color: var(--accent-color);
     color: #FFFFFF;
 
 }
@@ -486,6 +496,7 @@ color: #FFFFFF;
     letter-spacing: 0.03em;
     color: #FFFFFF;
     font-style: normal;
+    transition: color var(--time) var(--time-function);
 }
 
 .contact-item {
@@ -495,6 +506,7 @@ color: #FFFFFF;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
     font-style: normal;
+    transition: color var(--time) var(--time-function);
 }
 
 .footer-contact-info:not(:last-child) {
@@ -503,7 +515,7 @@ color: #FFFFFF;
 
 .contact-item-address:hover,
 .contact-item-address:focus {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 
 .contact-item-address:active {
@@ -512,7 +524,7 @@ color: #FFFFFF;
 
 .contact-item:hover,
 .contact-item:focus {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 
 .contact-item:active {
@@ -543,11 +555,12 @@ color: #FFFFFF;
     border-radius: 50%;
     color: #FFFFFF;
     background: rgba(255, 255, 255, 0.1);
+    transition: background-color var(--time) var(--time-function);
 }
 
 .footer-team-social-link:hover,
 .footer-team-social-link:focus {
-    background-color: #2196F3;
+    background-color: var(--accent-color);
 }
 /*PORTFOLIO MAIN CLASS*/
 
@@ -597,7 +610,7 @@ color: #FFFFFF;
 
 .portfolio-link-item:hover,
 .portfolio-list-item:focus {
-    background-color: #2196F3;
+    background-color: var(--accent-color);
     color: #FFFFFF
 }
 
@@ -664,7 +677,7 @@ color: #FFFFFF;
     background-color: rgba(33, 150, 243, 0.9);
     position: absolute;
     top:0;
-    left: 0;
+    left:0;
     height: 100%;
     padding-top: 63px;
     padding-left: 24px;
@@ -725,6 +738,7 @@ color: #FFFFFF;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     color: #AFB1B8;
+    transition: color var(--time) var(--time-function), border-color var(--time) var(--time-function);
 }
 
 
@@ -734,8 +748,8 @@ color: #FFFFFF;
 
 .customer-link:hover,
 .customer-link:focus {
-    color: #2196F3;
-    border-color: #2196F3;
+    color: var(--accent-color);
+    border-color: var(--accent-color);
 }
 
 /* MODAL WINDOW CLASS */
@@ -771,6 +785,8 @@ color: #FFFFFF;
 
 .modal-button {
     background-color: white;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     color: #000000;
